@@ -1,6 +1,9 @@
     - Table will now scroll to keep the currently edited entry visible if an edit leads to
       the entry getting sorted to a different position.
     - Reworked author and editor handling in Docbook export. Added Docbook XML header.
+    - Database will no longer be marked as changed after accepting external changes, unless one or
+      more changes were not accepted before merging, and unless database was already marked as
+      changed.
     - Fixed bug: entry editor doesn't appear when new entry is added while a filtering search or
       group selection is active.
     - Fixed bug in writing of metadata on Windows. For certain metadata lengths newlines would be
